Fix merge file issue; Add backstretch to header background image

--- a/less/main.less
+++ b/less/main.less
@@ -49,14 +49,13 @@ body {
 /*-- Header --*/
 .home-header {
     align-items: center;
-    background: @b-grey url(../images/header-edit.jpg) no-repeat center;
     background-attachment: fixed;
     background-size: cover;
     display: flex;
     flex-flow: column nowrap;
 
     .top-logo {  //Hero Logo
-        width: 250px;
+         width: 250px;
     }
 
     h1 {
