--- a/less/mixins.less
+++ b/less/mixins.less
@@ -24,6 +24,15 @@
     letter-spacing: .2rem;
 }
 
+// Header
+.logo-left {
+    .home-header {
+        a {
+            align-self: flex-start;
+        }
+    }
+}
+
 // Desktop Nav Menu
 .desktop-nav {
     background-color: @bg-kolor;
